🔨 refactoring : store-service 도메인 분리 코드 수정 - import문  .* 제거 - 주석 제거
- module-common연결 : BaseErrocde, CustomResponse등 기존 에러 해결
- DTO 및 converter 수정

- 빌드 및 실행 가능
- 아직 region부분 미흡